<resources>
    <string name="app_name">FirstApp</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="SubmitButton">Submit</string>
    <string name="EmptyText" ></string>
    <string name="AnswerBox">Enter a word: </string>
    <string name="ButtonErase">Delete</string>
    <string name="LetterA">A</string>
    <string name="LetterB">B</string>
    <string name="LetterC">C</string>
    <string name="LetterD">D</string>
    <string name="LetterE">E</string>
    <string name="LetterF">F</string>
    <string name="LetterG">G</string>
    <string name="LetterH">H</string>
    <string name="LetterI">I</string>
    <string name="LetterJ">J</string>
    <string name="LetterK">K</string>
    <string name="LetterL">L</string>
    <string name="LetterM">M</string>
    <string name="LetterN">N</string>
    <string name="LetterO">O</string>
    <string name="LetterP">P</string>
    <string name="LetterQ">Q</string>
    <string name="LetterR">R</string>
    <string name="LetterS">S</string>
    <string name="LetterT">T</string>
    <string name="LetterU">U</string>
    <string name="LetterV">V</string>
    <string name="LetterW">W</string>
    <string name="LetterX">X</string>
    <string name="LetterY">Y</string>
    <string name="LetterZ">Z</string>
    <string name="WordList">Words Found: \n</string>
    <string name="Score">Score: 0 \n</string>
    <string name="NewGame">Get new letters</string>
    <string name="GameTitle">Pangrams</string>
    <string name="ButtonPlay">Play Game</string>
    <string name="ButtonShuffle">Shuffle</string>
    <string name="title_activity_navigation__drawer">Navigation_Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pangrams</string>
    <string name="nav_header_subtitle">lungfishstudio@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_user_stats">Records</string>
    <string name="menu_achievements">Achievements</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_menu_navigation">MainMenuNavigation</string>
    <string name="ButtonDeleteSave">Erase Saved Data</string>
    <string name="menu_settings">Settings</string>
    <string name="SettingsSoundLabel">Music Volume</string>
    <string name="SettingsWordListLabel">Word List</string>
    <string name="SettingsWordListSwitchLeft">Common</string>
    <string name="SettingsWordListSwitchRight">Full</string>
    <string name="SettingsNightModeLabel">Night Mode</string>
    <string name="SettingsSwitchOn">On</string>
    <string name="SettingsSwitchOff">Off</string>
    <string name="SettingsAdvertisementsLabel">Enable Ads</string>
    <string name="SettingsInfoButtonImage">Question Mark</string>
    <string name="SettingsCredits" >
        &lt;b>CREDITS&lt;/b>&lt;br>
        &lt;u>Code and Game Design&lt;/u>&lt;br>
        Maxwell Lo&lt;br>
        &lt;u>Music&lt;/u>&lt;br>
        \"A Very Brady Special\" by Kevin MacLeod (&lt;a href="https://incompetech.com/">incompetech.com&lt;/a>)&lt;br>
        Licensed under Creative Commons: By Attribution 4.0 License&lt;br>
        &lt;a href="http://creativecommons.org/licenses/by/4.0/">http://creativecommons.org/licenses/by/4.0/&lt;/a>&lt;br>
        &lt;br>
        Game inspired by the &lt;a href="https://www.nytimes.com/puzzles/spelling-bee">New York Times Spelling Bee&lt;/a>.
        &lt;br>
        Developer is not affiliated with the New York Times.
    </string>
    <string name="SettingsCreditsObsolete" >
        &lt;b>CREDITS&lt;/b>&lt;br>
        &lt;u>Code and Game Design&lt;/u>&lt;br>
        Maxwell Lo&lt;br>
        &lt;u>Music&lt;/u>&lt;br>
        \"A Very Brady Special\" by Kevin MacLeod (&lt;a href="https://incompetech.com/">incompetech.com&lt;/a>)&lt;br>
        Licensed under Creative Commons: By Attribution 4.0 License&lt;br>
        &lt;a href="http://creativecommons.org/licenses/by/4.0/">http://creativecommons.org/licenses/by/4.0/&lt;/a>&lt;br>
        &lt;br>
        Game inspired by the &lt;a href="https://www.nytimes.com/puzzles/spelling-bee">New York Times Spelling Bee&lt;/a>.&lt;br>
        Full codebase available on &lt;a href="https://github.com/lo-maxwell/PangramsGame">Github&lt;/a>.
    </string>
    <string name="popup_word_list" >
        <i>Common word list:</i>\n
        Approximately 30,000 of the most common English words.\n
        Word list based on 20,000 word list from \n
        https://github.com/first20hours/google-10000-english.\n
        <i>Full word list:</i>\n
        Approximately 280,000 words.\n
        Based on the Collins Scrabble Word List (2019).\n
        <b>Setting takes effect upon getting a new set of letters.</b>\n
    </string>
    <string name="popup_night_mode" >
        <i></i>Changes between dark and light themes.\n
        Requires app restart.
    </string>
    <string name="achievement_first_pangram">First Pangram</string>
    <string name="achievement_word_progress_1">10 Words</string>
    <string name="achievement_word_progress_2">25 Words</string>
    <string name="achievement_word_progress_3">50 Words</string>
    <string name="achievement_word_length_1">Long Word</string>
    <string name="achievement_word_length_2">Very Long Word</string>
    <string name="achievement_word_length_3">Super Long Word</string>
    <string name="achievement_word_length_4">Ridiculously Long Word</string>
    <string name="achievement_speed_demon_1">Quick As Lightning</string>
    <string name="achievement_speed_demon_2">Speed Demon</string>
    <string name="achievement_playtime_1">Pretty Fun</string>
    <string name="achievement_first_pangram_details">Submit a word that contains 7 different letters.</string>
    <string name="achievement_word_progress_1_details">Submit a total of 10 words.</string>
    <string name="achievement_word_progress_2_details">Submit a total of 25 words.</string>
    <string name="achievement_word_progress_3_details">Submit a total of 50 words.</string>
    <string name="achievement_word_length_1_details">Submit a word with 7 or more letters.</string>
    <string name="achievement_word_length_2_details">Submit a word with 8 or more letters.</string>
    <string name="achievement_word_length_3_details">Submit a word with 9 or more letters.</string>
    <string name="achievement_word_length_4_details">Submit a word with 10 or more letters.</string>
    <string name="achievement_speed_demon_1_details">Submit 10 words with less than 10 seconds between each word.</string>
    <string name="achievement_speed_demon_2_details">Submit 20 words with less than 10 seconds between each word.</string>
    <string name="achievement_playtime_1_details">Play for a total of 15 minutes.</string>
</resources>
