<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_user_stats"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_user_stats" />
        <item
            android:id="@+id/nav_achievements"
            android:icon="@android:drawable/star_big_on"
            android:title="@string/menu_achievements" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
    </group>

</menu>
