<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Add_Text_Button_1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:background="@drawable/button_circle_gray_ripple"
        android:onClick="addLetter"
        android:text="@string/LetterA"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Add_Text_Button_4"
        app:layout_constraintEnd_toStartOf="@+id/Add_Text_Button_2"
        app:layout_constraintStart_toEndOf="@+id/Add_Text_Button_3" />

    <Button
        android:id="@+id/Add_Text_Button_2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:background="@drawable/button_circle_gray_ripple"
        android:onClick="addLetter"
        android:text="@string/LetterB"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Add_Text_Button_4"
        app:layout_constraintEnd_toEndOf="@+id/Add_Text_Button_4"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toEndOf="@+id/Add_Text_Button_1" />

    <Button
        android:id="@+id/Add_Text_Button_3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:background="@drawable/button_circle_gray_ripple"
        android:onClick="addLetter"
        android:text="@string/LetterC"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/Add_Text_Button_4"
        app:layout_constraintTop_toBottomOf="@+id/Add_Text_Button_1" />

    <Button
        android:id="@+id/Add_Text_Button_4"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="110dp"
        android:background="@drawable/button_circle_blue_ripple"
        android:onClick="addLetter"
        android:text="@string/LetterD"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Answer_Box" />

    <Button
        android:id="@+id/Add_Text_Button_5"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:background="@drawable/button_circle_gray_ripple"
        android:onClick="addLetter"
        android:text="@string/LetterE"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/Add_Text_Button_4"
        app:layout_constraintTop_toBottomOf="@+id/Add_Text_Button_2" />

    <Button
        android:id="@+id/Add_Text_Button_6"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:background="@drawable/button_circle_gray_ripple"
        android:onClick="addLetter"
        android:text="@string/LetterF"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/Add_Text_Button_7"
        app:layout_constraintStart_toStartOf="@+id/Add_Text_Button_4"
        app:layout_constraintTop_toBottomOf="@+id/Add_Text_Button_4" />

    <Button
        android:id="@+id/Add_Text_Button_7"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:background="@drawable/button_circle_gray_ripple"
        android:onClick="addLetter"
        android:text="@string/LetterG"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/Add_Text_Button_4"
        app:layout_constraintStart_toEndOf="@+id/Add_Text_Button_6"
        app:layout_constraintTop_toBottomOf="@+id/Add_Text_Button_4" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="textPersonName"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/sendButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="sendMessage"
        android:text="@string/button_send"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Answer_Box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/AnswerBox"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:id="@+id/Message_Box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EmptyText"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/Answer_Box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:id="@+id/Score_Tracker"
        android:layout_width="130dp"
        android:layout_height="220dp"
        android:layout_marginTop="12dp"
        android:text="@string/Score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Word_List_Scroll_View"
        app:layout_constraintTop_toBottomOf="@+id/Submit_Button" />

    <ScrollView
        android:id="@+id/Word_List_Scroll_View"
        android:layout_width="180dp"
        android:layout_height="220dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toStartOf="@+id/Score_Tracker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Erase_Button">

        <LinearLayout
            android:id="@+id/Word_List_Linear_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Word_List"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="0dp"
                android:autoSizeTextType="none"
                android:text="@string/WordList" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/New_Game_Button"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:onClick="startNewGame"
        android:text="@string/NewGame"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/Score_Tracker"
        app:layout_constraintEnd_toEndOf="@+id/Score_Tracker"
        app:layout_constraintStart_toStartOf="@+id/Score_Tracker" />

    <Button
        android:id="@+id/Shuffle_Button"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="108dp"
        android:onClick="shuffleLetters"
        android:text="@string/ButtonShuffle"
        app:layout_constraintEnd_toStartOf="@+id/Submit_Button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Erase_Button"
        app:layout_constraintTop_toBottomOf="@+id/Add_Text_Button_4" />

    <Button
        android:id="@+id/Submit_Button"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="108dp"
        android:onClick="submitWord"
        android:text="@string/SubmitButton"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Shuffle_Button"
        app:layout_constraintTop_toBottomOf="@+id/Add_Text_Button_4" />

    <Button
        android:id="@+id/Erase_Button"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="108dp"
        android:onClick="eraseAnswerBox"
        android:text="@string/ButtonErase"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/Shuffle_Button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Add_Text_Button_4" />

</androidx.constraintlayout.widget.ConstraintLayout>